ros2_ws/log/build_2020-10-15_02-07-14/py_pubsub/stderr.log
Sorry: IndentationError: unexpected indent (publisher_member_function.py, line 284)
  File "/home/shorouk/ros2_ws/install/py_pubsub/lib/python3.6/site-packages/py_pubsub/test.py", line 3
    echo $z
         ^
SyntaxError: invalid syntax

Sorry: IndentationError: unexpected indent (imagenode1.py, line 244)
